# rust-rocket-mongodb

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs
src/cats/: handler.rs  mod.rs  repository.rs
