[package]
name = "rust-rocket-mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1.0"
dotenv = "0.15.0"
r2d2 = "0.8.3"
r2d2-mongodb = "*"
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
# Benches
criterion = "0.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"
